Fix cats pretrained model dep

--- a/src/guild.yml
+++ b/src/guild.yml
@@ -483,5 +483,5 @@
       description: Trained cats model
       path: pretrained
       sources:
-        - operation: finetune
-          select: model/.*
+        - operation: export
+          select: export/.*
