Fix pipeline config for resnet50

--- a/src/pipelines/faster_rcnn_resnet50_pets.config
+++ b/src/pipelines/faster_rcnn_resnet50_pets.config
@@ -85,10 +85,6 @@ train_config: {
         manual_step_learning_rate {
           initial_learning_rate: 0.0003
           schedule {
-            step: 0
-            learning_rate: .0003
-          }
-          schedule {
             step: 900000
             learning_rate: .00003
           }
@@ -103,7 +99,7 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED/model.ckpt"
+  fine_tune_checkpoint: "pretrained/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
@@ -118,9 +114,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/pet_train.record"
+    input_path: "data/pet_train.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/pet_label_map.pbtxt"
+  label_map_path: "object_detection/data/pet_label_map.pbtxt"
 }
 
 eval_config: {
@@ -132,9 +128,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/pet_val.record"
+    input_path: "data/pet_val.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/pet_label_map.pbtxt"
+  label_map_path: "object_detection/data/pet_label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
