--- a/src/pipelines/faster_rcnn_resnet50_cats.config
+++ b/src/pipelines/faster_rcnn_resnet50_cats.config
@@ -103,7 +103,7 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED/model.ckpt"
+  fine_tune_checkpoint: "pretrained/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
